[project]
name = "hpic-dashboard"
version = "0.1.0"
description = "HPIC Membership and Revenue Dashboard"
authors = [
    {name = "HPIC Team"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
